--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
       -  uses: actions/checkout@v3 
       - name: "Login to Docker hub"
-        run: docker login --username amanyy --password dckr_pat_UNLE6uyZqfkdVosvpb34dpii7hs
+        run: docker login --username ${{secrets.DOCKER_USERNAME}}--password ${{secrets.DOCKER_TOKEN}}
     
 
      
